verticle spacing fix

--- a/new design for staging/marvelad.css
+++ b/new design for staging/marvelad.css
@@ -1252,7 +1252,7 @@ ol.v-story-indicators li.triangle {
         font-size: 14px;
     }
     .right-box .right-box-sub {
-        margin-bottom: 9px;
+        margin-bottom: 17px;
     }
     .breaking-news-2 .news-title {
         color: #215487;
